<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/edit_Text_Valor1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/edit_Text_Valor2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="357dp"
        android:layout_height="230dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor2">

        <RadioButton
            android:id="@+id/sumar"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button1"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/restar"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button2"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/multiplicar"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button3"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/dividir"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button4"
            android:textSize="24sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/text_view"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:onClick="Calcular"
        android:text="@string/button"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>